# dlt-blueprint

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.py  pyproject.toml
cicd/: azure-pipelines.yml
cicd/templates/: databricks_deploy.yml  linting.yml  qa.yml
infra/databricks/: databricks_deploy.sh
infra/databricks/clusters/production/: pr-clst-datb-we-dynamics-ingestion.json
infra/databricks/clusters/staging/: st-clst-datb-we-dynamics-ingestion.json
infra/databricks/jobs/production/: dynamics_ingestion.json
infra/databricks/jobs/staging/: dynamics_ingestion.json
scripts/: banner.txt  poetry_init.sh
src/: context.py  logger.py  pipeline.py  pipeline_orchestrator.py
src/bronze/: class_mapping.py  contact.py  email.py  hype_casestatus.py  hype_category.py  hype_corebankingstatus.py  hype_emoneyaccount.py  hype_pack.py  hype_product.py  hype_statustransitionlog.py  hype_subcategory.py  hype_tag.py  incident.py  my_pipeline.py  queue.py  systemuser.py  team.py
src/monitoring/: class_mapping.py  data_quality_log.py
src/pipelines/: class_mapping.py  sample_pipeline_1.py  sample_pipeline_2.py
src/silver/: class_mapping.py  contact.py  email.py  hype_casestatus.py  hype_category.py  hype_corebankingstatus.py  hype_emoneyaccount.py  hype_pack.py  hype_product.py  hype_statustransitionlog.py  hype_subcategory.py  hype_tag.py  incident.py  queue.py  systemuser.py  team.py
tests/: conftest.py
tests/unit/: context_test.py  pipeline_orchestrator_test.py  pipeline_test.py  sample_pipeline_test.py
(+10 files in other folders)
